--- a/exercism/package.json
+++ b/exercism/package.json
@@ -4,7 +4,7 @@
   "description": "exercises taken from exercism.io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "keenan johnson",
   "license": "ISC",
